--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,19 @@
 variables:
     RELEASE_NAME: "${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}-g${CI_COMMIT_SHORT_SHA}-b${CI_PIPELINE_ID}"
+    TEST_PYPI_SERVER: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi"
+    TEST_PYPI_USER: "gitlab-ci-token"
+    TEST_PYPI_PASSWORD: "${CI_JOB_TOKEN}"
+    TEST_PYPI_INDEX_URL: "https://gitlab-ci-token:${CI_JOB_TOKEN}@${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/pypi/simple"
 
 default:
     tags:
       - linux-docker
 
 image: ${PLG_CI_DOCKER_TAG}/rusty-python:latest
+
+stages:
+  - build
+  - publish-test
 
 dist:
     stage: build
@@ -15,3 +23,8 @@ dist:
         name: "${RELEASE_NAME}"
         paths:
           - dist
+
+pubtest:
+    stage: publish-test
+    script:
+      - maturin upload --skip-existing -r "${TEST_PYPI_SERVER}" -u "${TEST_PYPI_USER}" -p "${TEST_PYPI_PASSWORD}" dist/*
