--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ image: ${PLG_CI_DOCKER_TAG}/rusty-python:latest
 stages:
   - build
   - publish-test
+  - deploy
 
 dist:
     stage: build
@@ -28,3 +29,10 @@ pubtest:
     stage: publish-test
     script:
       - maturin upload --skip-existing -r "${TEST_PYPI_SERVER}" -u "${TEST_PYPI_USER}" -p "${TEST_PYPI_PASSWORD}" dist/*
+
+publish:
+    stage: deploy
+    only:
+      - tags
+    script:
+      - maturin upload -r "${PLG_CI_PYPI_SERVER}" -u "${PLG_CI_PYPI_USER}" -p "${PLG_CI_PYPI_PASSWORD}" dist/*
